// Generated by https://github.com/foxglove/foxglove-sdk

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package foxglove;

// A log message
message SensorHealth {
  // Timestamp of log message
  google.protobuf.Timestamp timestamp = 1;
  int64 num_sensors = 2;
  repeated double sensor_temps = 3;
}
